--- a/css/style.css
+++ b/css/style.css
@@ -672,9 +672,10 @@ width: 360px;
   }
   .form_subscribe_input {
     padding: 0.5rem 1rem;
-    width: 100%;
-    max-width: 264px;
-    height: 100%;
+    /*width: 100%;*/
+    width: 264px;
+   /* height: 100%;*/
+    height: 40px;
     border-radius: 4px;
     border: 1px solid #FFF;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -694,9 +695,19 @@ width: 360px;
     gap: 1rem;
     padding: 0.5rem 1.5rem;
     min-width: 165px;
+    height: 40px;
+    border-radius: 4px;
+    border: none; 
+    background-color: #4D5AE5;
+    cursor: pointer;
+    color: #ffffff;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    font-weight: 500;
   }
   .form_subscribe_icon {
     fill: currentColor;
+    margin-left: 16px;
   }
   
   .modal {
