--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ width: 360px;
     --link-color: #4d5ae5;
   }
   .form_primary_wrapper1 {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
   }
   .form_primary_wrapper--mb16 {
     margin-bottom: 1rem;
@@ -827,6 +827,7 @@ width: 360px;
   }
   .form_primary_input:focus + svg, .form_primary_textarea:focus + svg, .form_primary_input:hover + svg, .form_primary_textarea:hover + svg {
     fill: #4D5AE5;
+    fill:none ;
   }
   .form_primary_icon {
     position: absolute;
@@ -864,8 +865,8 @@ width: 360px;
     color: var(--link-color);
   }
   .form_primary_checkbox_pseudo {
-    width: 1rem;
-    height: 1rem;
+    width: 16px;
+    height: 16px;
     margin-right: 0.5rem;
     display: inline-flex;
     align-items: center;
@@ -878,5 +879,18 @@ width: 360px;
   .form_primary_action {
     margin-top: 1rem;
     min-width: 169px;
+    display: block;
+    height: 56px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff ;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    font-weight: 500;
+    border-radius: 4px; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }/*# sourceMappingURL=styles.css.map */
   
