--- a/css/style.css
+++ b/css/style.css
@@ -726,7 +726,8 @@ width: 360px;
     background-color: rgba(46, 47, 66, 0.4);
     opacity: 1;
     visibility: visible;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /*transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
   }
   .modal.is_open {
