--- a/css/style.css
+++ b/css/style.css
@@ -727,7 +727,7 @@ width: 360px;
     opacity: 1;
     visibility: visible;
     /*transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
   }
   .modal.is_open {
@@ -748,6 +748,7 @@ width: 360px;
     background-color: #FCFCFC;
     border-radius: 4px;
     box-shadow: 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   
   }
   .modal_close_button {
@@ -857,7 +858,7 @@ width: 360px;
     resize: none;
     color: rgba(46, 47, 66, 0.4);
   }
-  .form_primary_checkbox:checked + .form_primary_checkbox_label .form_primary_checkbox_pseudo {
+  .form_primary_checkbox:checked + /*.form_primary_checkbox_label */.form_primary_checkbox_pseudo {
     background-color: #404bbf;
     border: none;
     fill: #4D5AE5;
